fix: костыльный fix NavigationBreadcrumbs overflow

--- a/src/components/NavigationControl/NavigationBreadcrumbs/NavigationBreadcrumbs.module.css
+++ b/src/components/NavigationControl/NavigationBreadcrumbs/NavigationBreadcrumbs.module.css
@@ -3,17 +3,23 @@
     height: rem(32px);
     border-radius: var(--mantine-radius-xl);
     padding: 0 rem(8px);
+    overflow: hidden;
+    max-width: 72vw;
 }
 
 .breadcrumb {
-    display: grid;
-    place-content: center;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
     padding: 0 rem(8px);
     height: rem(24px);
     border-radius: var(--mantine-radius-xl);
     transition: 150ms ease;
-    overflow: hidden;
     text-wrap: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    min-width: 0;
 
     @mixin hover {
         background: darken(var(--mantine-color-default-hover), 0.05);
